tests/errors/match_type_mismatch.dang
# This should fail: match cases have incompatible types
pub result = match (1) with {
  1 -> "string"
  2 -> 42
}
